apps/production/monitoring/grafana/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: grafana
          namespace: monitoring
          port: 3000
      middlewares:
        - name: default-headers
  tls:
    secretName: hejsan-xyz-tls
